<resources>
    <string name="app_name">Barcode</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>

    <!-- TODO: Volley error helper -->
    <string name="no_network_connection" translatable="false">No network connection found</string>
    <string name="generic_server_down" translatable="false">Server down</string>
    <string name="generic_server_timeout" translatable="false">Server Timeout</string>
    <string name="generic_error" translatable="false">No internet</string>
    <string name="no_internet" translatable="false">No internet</string>
    <string name="parsing_failed" translatable="false">Parsing Failure</string>
    <string name="auth_failed" translatable="false">Authentication Failure</string>

    <!--TODO:Login  Activity-->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="consumerSecret">Consumer\nSecret</string>
    <string name="consumerKey">Consumer Key</string>
    <string name="securityToken">Security Token</string>
    <string name="btnlogin">Login</string>
    <string name="title_activity_login">Sign in</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="response_success">response_success</string>
    <string name="response_error">response_error</string>
    <string name="title_activity_barcode">BarcodeActivity</string>
    <string name="title_activity_barcode_capture">BarcodeCaptureActivity</string>

    <string name="praceable_modal_regsitration">MODAL_REGISTRATION</string>

    <!--TODO: Login Url Error String-->
    <string name="invalid_grant">Invalid UserName, Password or Security Token</string>
    <string name="invalid_client">Invalid Consumer Secret</string>
    <string name="invalid_client_id">Invalid Consumer Key</string>

</resources>
