<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-bold"
            android:textColor="@android:color/white"
            android:text="Login"
            android:textAppearance="?android:textAppearanceMedium"
            android:textStyle="bold"
            android:id="@+id/toolbar_title" />

    </android.support.v7.widget.Toolbar>


    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_below="@+id/toolbar"
        android:layout_gravity="center"/>



    <ScrollView
        android:id="@+id/login_form"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image"
                android:layout_width="200dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:layout_centerHorizontal="true"
                android:src="@drawable/barcodeicon"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:textColor="@color/colorEdittext"
                android:layout_centerHorizontal="true"
                android:text="Scan BarCode"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceLarge"/>

            <RelativeLayout
                android:id="@+id/rel_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:layout_margin="15dp"
                android:padding="10dp"
                android:layout_below="@+id/image">

                <TextView
                    android:id="@+id/username"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="User Name"
                    android:textColor="@android:color/white"
                    android:background="@color/colortextview"/>

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:singleLine="true"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:hint="@string/username"
                    android:imeOptions="actionNext"
                    android:layout_toRightOf="@+id/username"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorEdittext"/>

                <TextView
                    android:id="@+id/password"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/password"
                    android:textColor="@android:color/white"
                    android:background="@color/colortextview"
                    android:layout_below="@+id/username"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:singleLine="true"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:password="true"
                    android:imeOptions="actionNext"
                    android:layout_toRightOf="@+id/password"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorEdittext"
                    android:layout_below="@+id/etUsername"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/ConsumerSecret"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/consumerSecret"
                    android:textColor="@android:color/white"
                    android:background="@color/colortextview"
                    android:layout_below="@+id/password"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/etConsumerSecret"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:singleLine="true"
                    android:hint="@string/consumerSecret"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:imeOptions="actionNext"
                    android:layout_toRightOf="@+id/ConsumerSecret"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorEdittext"
                    android:layout_below="@+id/etpassword"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/Consumerkey"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/consumerKey"
                    android:textColor="@android:color/white"
                    android:background="@color/colortextview"
                    android:layout_below="@+id/ConsumerSecret"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/etConsumerKey"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/consumerKey"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_toRightOf="@+id/Consumerkey"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorEdittext"
                    android:layout_below="@+id/etConsumerSecret"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/SecurityToken"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:gravity="center"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:text="@string/securityToken"
                    android:textColor="@android:color/white"
                    android:background="@color/colortextview"
                    android:layout_below="@+id/Consumerkey"
                    android:layout_marginTop="10dp"/>

                <EditText
                    android:id="@+id/etSecurityToken"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:singleLine="true"
                    android:hint="@string/securityToken"
                    android:imeOptions="actionDone"
                    android:layout_toRightOf="@+id/Consumerkey"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/colorEdittext"
                    android:layout_below="@+id/etConsumerKey"
                    android:layout_marginTop="10dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/btnlogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etSecurityToken"
                    android:background="@color/colorPrimaryDark"
                    android:layout_marginTop="16dp"
                    android:text="Login"
                    android:textColor="@android:color/black"/>

            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>

</RelativeLayout>